# nn_jax

./: .pre-commit-config.yaml  README.md  pyproject.toml
activation_function/: __init__.py  activation_function.py  relu.py  softmax.py
example/: yt_progress.py
layer/: dense.py
loss/: __init__.py  categorial_cross_entropy.py  loss.py
nn_jax/activation_function/: __init__.py  relu.py  softmax.py
nn_jax/layer/: __init__.py  dense.py  layer.py
nn_jax/loss/: __init__.py  categorial_cross_entropy.py
nn_jax/utils/: __init__.py
src/nn_jax/activation_function/: __init__.py  activation_function.py  relu.py  softmax.py
src/nn_jax/layer/: __init__.py  dense.py  layer.py
src/nn_jax/loss/: __init__.py  categorial_cross_entropy.py  loss.py
src/nn_jax/utils/: __init__.py
tests/: test_dense.py
utils/: __init__.py  seed.py
