[project]
name = "nn_jax"
version = "0.1.0"
description = "Neural network from scratch using JAX"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax[cuda13]>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nn_jax"
module-root = "src"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
    "pytest-cov>=7.0.0",
]
